--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Barriecito&display=swap');
+
 body {
     background-image: url("../img/uglywallpaper.jpg");
     background-repeat: repeat;
@@ -10,6 +12,8 @@ h1 {
     background-color:darkmagenta;
     width: 20%;
     margin:auto; 
+    font-family:'Courier New', Courier, monospace;
+    font-size:  40px;
 }
 
 p {
@@ -17,6 +21,9 @@ p {
     background-image: url("../img/coolcheetah.jpg");
     width: 40%;
     padding: 10%;
+    font-family: "Barriecito", system-ui;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .row {
@@ -26,4 +33,5 @@ p {
 .column {
     flex: 33.33%;
     padding: 5px;
+    width: 30%; 
 }
